<resources>
    <string name="app_name">Purzaa</string>
    <string name="Fullname">Fullname</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="Signup">Signup</string>
    <string name="Loginhere">Loginhere</string>
    <string name="Login">Login</string>
    <string name="SelectCarname">SelectCarname</string>
    <string name="Model">Model</string>
    <string name="City">City</string>
    <string name="EngineCC">Engine CC</string>
    <string name="Phonenumber">Phonenumber</string>
    <string name="Booking">Booking</string>
    <string name="Address">Address</string>
    <string name="LoginHere">LoginHere</string>
    <string name="BookNow">Book Now</string>
    <string name="Purza">Purza Online</string>
    <style name="gfgGreenText">
        <item name="android:textStyle">bold</item>
        <item name="android:textColor">#0f9d58</item>
    </style>
</resources>
