<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@drawable/front"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="80dp"
            android:text="SignUp"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:layout_marginTop="32dp"
            android:hint="@string/Fullname"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="190dp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppinsmedium"
            android:hint="@string/Username"
            tools:layout_editor_absoluteY="308dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppinsmedium"
            android:hint="@string/Email" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppinsmedium"
            android:hint="@string/Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/Signup"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:fontFamily="@font/poppinsmedium"
            android:textColor="@color/black"
            android:text="@string/LoginHere"
            android:gravity="center"
            tools:layout_editor_absoluteY="1dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>