<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".enginetune">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/engine"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical" >
    <TextView
        android:id="@+id/enginetune"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="102dp"
        android:text="Engine Tune Up Booking"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/tuneup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="392dp"
        android:fontFamily="@font/poppinsmedium"
        android:hint="@string/SelectCarname" />

        <EditText
            android:id="@+id/model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-363dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/poppinsmedium"
            android:hint="@string/Model" />


        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/poppinsmedium"
            android:hint="@string/City" />

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/Phonenumber" />

        <Button
            android:id="@+id/booking1"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/BookNow" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>