<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".carwash">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:background="@drawable/wash"
        android:paddingRight="16dp"
        android:orientation="vertical" >
    <TextView
        android:id="@+id/carwash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="142dp"
        android:text="Car Wash Booking"
        android:layout_marginLeft="74dp"
        android:textColor="@color/red"
        android:textSize="30dp"
        android:textStyle="bold" />

        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppinsmedium"
            android:hint="@string/Fullname"/>

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppinsmedium"
            android:hint="@string/Address" />

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppinsmedium"
            android:hint="@string/City" />

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/Phonenumber"/>

        <Button
            android:id="@+id/booking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Book Now"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_marginTop="32dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>