<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@drawable/login"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/loing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="132dp"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:text="Login"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="22dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppinsmedium"
            android:hint="@string/Username" />

        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/poppinsmedium"
            android:hint="@string/Password" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/Login"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/signText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:gravity="center"
            android:text="SignUpHere"
            android:textSize="20dp"
            tools:layout_editor_absoluteY="1dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>